--- a/index.html
+++ b/index.html
@@ -1,37 +1,11 @@
-<!-- Pantalla de Catálogo - BestDeal Pal -->
-<!DOCTYPE html>
-<html>
-<head>
-  <title>BestDeal Pal</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    header { background: #00b894; color: white; padding: 1em; text-align: center; }
-    .filters { padding: 1em; background: #f1f1f1; }
-    .product { border-bottom: 1px solid #ccc; padding: 1em; }
-    .product h3 { margin: 0; }
-    .product p { margin: 0.5em 0; }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>BestDeal Pal</h1>
-    <p>Encuentra el precio más bajo</p>
-  </header>
-  <div class="filters">
-    <label>Categoría: <select><option>Todos</option><option>Electrónica</option><option>Ropa</option></select></label>
-    <label>Ordenar por:
-      <select>
-        <option>Precio más bajo</option>
-        <option>Popularidad</option>
-      </select>
-    </label>
-  </div>
-  <div class="product">
-    <h3>Producto 1</h3>
-    <p>Precio: $9.99</p>
-    <p>Tienda: Amazon</p>
-    <a href="#">Ver oferta</a>
-  </div>
-  <!-- Más productos aquí... -->
-</body>
-</html>
+<!DOCTYPE html><html lang="es"><head>  <meta charset="UTF-8" />  <title>BestDeal Pal</title>  <style>    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f4; }    header { background: #00b894; color: white; padding: 1em; text-align: center; }    .filters { padding: 1em; background: #ecf0f1; }    .product { background: white; margin: 1em; padding: 1em; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }    .product img { max-width: 100%; height: auto; border-radius: 10px; }    .product h3 { margin: 0.5em 0 0.2em; }    .product p { margin: 0.3em 0; }    .product a { color: #0984e3; text-decoration: none; font-weight: bold; }  </style></head><body>
+  <header>    <h1>BestDeal Pal</h1>    <p>Encuentra el precio más bajo</p>  </header>
+  <div class="filters">    <label for="categoryFilter">Categoría: </label>    <select id="categoryFilter" onchange="renderProducts()">      <option value="Todos">Todos</option>    </select>  </div>
+  <div id="productList"></div>
+  <script>    let products = [];
+    async function fetchData() {      const res = await fetch("https://script.google.com/macros/s/AKfycbzwW0b8ZWPK2sP-harrxLZNLjrOAriVd6pfZ4f7XvLImWqfVXCyCcNMqMDXkhmvRDGLVw/exec");      products = await res.json();      populateCategories();      renderProducts();    }
+    function populateCategories() {      const categories = new Set(products.map(p => p.Categoría));      const select = document.getElementById("categoryFilter");      categories.forEach(cat => {        const option = document.createElement("option");        option.value = cat;        option.textContent = cat;        select.appendChild(option);      });    }
+    function renderProducts() {      const list = document.getElementById("productList");      const selected = document.getElementById("categoryFilter").value;      list.innerHTML = "";
+      products        .filter(p => selected === "Todos" || p.Categoría === selected)        .forEach(p => {          const div = document.createElement("div");          div.className = "product";          div.innerHTML = `            <img src="${p.Imagen}" alt="${p.Producto}" />            <h3>${p.Producto}</h3>            <p><strong>Precio:</strong> $${p.Precio}</p>            <p><strong>Tienda:</strong> ${p.Tienda}</p>            <a href="${p.Enlace}" target="_blank">Ver oferta</a>          `;          list.appendChild(div);        });    }
+    fetchData();  </script>
+</body></html>
