--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html><html><head>  <title>BestDeal Pal</title>  <style>    body {      font-family: Arial, sans-serif;      margin: 0;      padding: 0;    }    header {      background: #00b894;      color: white;      padding: 1em;      text-align: center;    }    .filters {      padding: 1em;      background: #f1f1f1;    }    .product {      border-bottom: 1px solid #ccc;      padding: 1em;    }    .product h3 {      margin: 0;    }    .product p {      margin: 0.5em 0;    }  </style></head><body>  <header>    <h1>BestDeal Pal</h1>    <p>Encuentra el precio más bajo</p>  </header>
-  <div class="filters">    <label>      Categoría:      <select id="filter-category">        <option value="">Todas</option>      </select>    </label>  </div>
-  <div id="product-list"></div>
-  <script>    const apiUrl = "https://script.google.com/macros/s/AKfycbw0bO0k0BbXQ6s6_VHEnlxGopCxC6CTkY6LwQKPQ4NShV0D0mEtH6TveRiIoJnw2ij73Q/exec";
-    fetch(apiUrl)      .then(response => response.json())      .then(data => {        const categories = new Set();        const list = document.getElementById("product-list");        const categorySelect = document.getElementById("filter-category");
-        function renderProducts(filter = "") {          list.innerHTML = "";          data.forEach(product => {            if (!filter || product.Categoría === filter) {              const item = document.createElement("div");              item.className = "product";              item.innerHTML = `                <h3>${product.Nombre}</h3>                <p>Precio: $${product.Precio}</p>                <p>Tienda: ${product.Tienda}</p>                <a href="${product.Enlace}" target="_blank">Ver oferta</a>              `;              list.appendChild(item);            }          });        }
-        data.forEach(product => {          if (product.Categoría) categories.add(product.Categoría);        });
-        [...categories].forEach(cat => {          const opt = document.createElement("option");          opt.value = cat;          opt.textContent = cat;          categorySelect.appendChild(opt);        });
-        categorySelect.addEventListener("change", () => {          renderProducts(categorySelect.value);        });
-        renderProducts();      })      .catch(error => {        console.error("Error al cargar productos:", error);      });  </script></body></html>
+<!DOCTYPE html><html lang="es"><head>  <meta charset="UTF-8" />  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  <title>BestDeal Pal</title>  <style>    body {      font-family: Arial, sans-serif;      margin: 0;      background-color: #f9f9f9;    }
+    header {      background: #00b894;      color: white;      text-align: center;      padding: 1em 0;    }
+    header img {      max-height: 60px;      display: block;      margin: 0 auto 10px;    }
+    .filters {      background-color: #f1f1f1;      padding: 1em;      display: flex;      gap: 1em;      flex-wrap: wrap;      justify-content: center;    }
+    select {      padding: 0.5em;      font-size: 1em;    }
+    .products {      padding: 1em;    }
+    .product {      background: white;      margin-bottom: 1em;      padding: 1em;      border-radius: 8px;      box-shadow: 0 2px 4px rgba(0,0,0,0.1);    }
+    .product h3 {      margin: 0 0 0.5em;    }
+    .product p {      margin: 0.3em 0;    }
+    .product a {      display: inline-block;      margin-top: 0.5em;      padding: 0.5em 1em;      background: #00b894;      color: white;      text-decoration: none;      border-radius: 4px;    }
+    .product a:hover {      background: #019875;    }  </style></head><body>  <header>    <img src="https://i.imgur.com/GFzF7E2.png" alt="BestDeal Pal Logo" />    <h1>BestDeal Pal</h1>    <p>Encuentra el precio más bajo</p>  </header>
+  <div class="filters">    <label>      Categoría:      <select id="categoryFilter">        <option value="Todos">Todos</option>      </select>    </label>  </div>
+  <div class="products" id="productList">    <p>Cargando productos...</p>  </div>
+  <script>    const API_URL = "https://script.google.com/macros/s/AKfycbw0bO0k0BbXQ6s6_VHEnlxGopCxC6CTkY6LwQKPQ4NShV0D0mEtH6TveRiIoJnw2ij73Q/exec";
+    async function fetchProducts() {      const res = await fetch(API_URL);      const data = await res.json();      return data;    }
+    function renderProducts(products) {      const list = document.getElementById("productList");      const filter = document.getElementById("categoryFilter").value;
+      const filtered = filter === "Todos"        ? products        : products.filter(p => p.categoria === filter);
+      if (filtered.length === 0) {        list.innerHTML = "<p>No hay productos en esta categoría.</p>";        return;      }
+      list.innerHTML = "";      filtered.forEach(p => {        const div = document.createElement("div");        div.className = "product";        div.innerHTML = `          <h3>${p.nombre}</h3>          <p>Precio: ${p.precio}</p>          <p>Tienda: ${p.tienda}</p>          <a href="${p.enlace}" target="_blank">Ver oferta</a>        `;        list.appendChild(div);      });    }
+    function populateCategories(products) {      const categories = [...new Set(products.map(p => p.categoria))];      const select = document.getElementById("categoryFilter");
+      categories.forEach(cat => {        const opt = document.createElement("option");        opt.value = cat;        opt.textContent = cat;        select.appendChild(opt);      });
+      select.addEventListener("change", () => renderProducts(products));    }
+    fetchProducts().then(data => {      populateCategories(data);      renderProducts(data);    }).catch(() => {      document.getElementById("productList").innerHTML = "<p>Error al cargar productos.</p>";    });  </script></body></html>
